First concept version of parallax effect working

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="#prijzen">Prijzen</a></li>
         <li><a href="#producten">Producten</a></li>
         <li><a href="#locatie">Locatie</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact">Contact</a>(<span id="pixels"></span>)</li>
       </ul>
     </nav>
   </header>
@@ -48,9 +48,7 @@
       </hgroup>
     </section>
 
-    <section id="fill1" class="fill">
-      <img src="img/fill1.jpg">
-    </section>
+    <section id="fill1" class="fill"></section>
 
     <section id="prijzen">
       <div class="wrap">
@@ -61,7 +59,6 @@
           bekijken van de simpel van een pagina, afgeleid kwaliteit door de
           tekstuele inhoud.
         </p>
-
 
         <section id="pricedata">
 
@@ -138,13 +135,12 @@
           </ul>
 
           <em class="note">Alle behandelingen zijn incl. verzorgende shampoo, lak en versteviging.</em>
-        </div> <!-- #pricedata -->
+        </section> <!-- #pricedata -->
+      </div> <!-- .wrap -->
 
-      </div>
     </section>
 
     <section id="fill2" class="fill">
-      <img src="img/fill2.jpg">
     </section>
 
     <section id="producten" class="clearfix">
@@ -170,7 +166,6 @@
     </section>
 
     <section id="fill3" class="fill">
-      <img src="img/fill3.jpg">
     </section>
 
     <section id="locatie">
@@ -205,7 +200,6 @@
     </section>
 
     <section id="fill4" class="fill">
-      <img src="img/fill4.jpg">
     </section>
 
     <section id="contact">
