New parallax methods added, heavy refactoring going on...

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>kappr ~ de betaalbare kapper</title>
-  <meta name="description" content="">
+  <meta name="description" content="kappr is de nieuwe en betaalbare kapper in Nieuwegein">
 
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=800">
 
   <link rel="stylesheet" href="css/style.css">
   <script src="js/libs/modernizr-2.5.2.min.js"></script>
@@ -23,194 +23,209 @@
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-  <header>
-    <figure id="logo"><img src="img/logo.png"></figure>
-    <nav role="navigation" id="access">
-      <ul>
-        <li><a href="#overons">Over ons</a></li>
-        <li><a href="#prijzen">Prijzen</a></li>
-        <li><a href="#producten">Producten</a></li>
-        <li><a href="#locatie">Locatie</a></li>
-        <li><a href="#contact">Contact</a>(<span id="pixels"></span>)</li>
-      </ul>
-    </nav>
+  <header id="top">
+    <figure id="logo"><img src="img/logo.png" alt="kappr - de betaalbare kapper!"></figure>
   </header>
+  <nav role="navigation" id="access">
+    <ul>
+      <li><a href="#top">Over ons</a></li>
+      <li><a href="#prijzen">Prijzen</a></li>
+      <li><a href="#producten">Producten</a></li>
+      <li><a href="#locatie">Locatie</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <span id="pixels" style="position:fixed;background-color:#000;border:1px solid #ccc;color:#fff;left:10px;top:100px;width:50px;z-index:50;padding:2px 5px;border-radius:3px"></span>
+
   <div id="main" role="main">
 
-    <section id="overons">
-      <hgroup class="wrap">
-        <h1>De nieuwe en <em>betaalbare</em> kapper.</h1>
-        <h2>
-          Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het
-          bekijken van de <em>simpel</em> van een pagina, afgeleid kwaliteit door de
-          tekstuele inhoud.
-        </h2>
-      </hgroup>
+    <section id="overons" class="chapter">
+      <section class="content">
+        <hgroup class="wrap">
+          <h1>De nieuwe en <em>betaalbare</em> kapper.</h1>
+          <h2>
+            Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het
+            bekijken van de <em>simpel</em> van een pagina, afgeleid kwaliteit door de
+            tekstuele inhoud.
+          </h2>
+        </hgroup>
+      </section>
+
+      <div id="fill1" class="fill"></div>
     </section>
 
-    <section id="fill1" class="fill"></section>
+    <section id="prijzen" class="chapter">
 
-    <section id="prijzen">
-      <div class="wrap">
+      <section class="content">
+        <div class="wrap">
 
-        <h1>Prijzen</h1>
-        <p>
-          Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het
-          bekijken van de simpel van een pagina, afgeleid kwaliteit door de
-          tekstuele inhoud.
-        </p>
+          <h1>Prijzen</h1>
+          <p>
+            Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het
+            bekijken van de simpel van een pagina, afgeleid kwaliteit door de
+            tekstuele inhoud.
+          </p>
 
-        <section id="pricedata">
+          <section id="pricedata">
 
-          <ul class="column first">
+            <ul class="column first">
 
-            <li class="product">
-              <hgroup>
-                <h2>Knippen</h2>
-                <h3>&euro; 19,50</h3>
-              </hgroup>
-            </li>
+              <li class="product">
+                <hgroup>
+                  <h2>Knippen</h2>
+                  <h3>&euro; 19,50</h3>
+                </hgroup>
+              </li>
 
-            <li class="product">
-              <hgroup>
-                <h2>Kind knippen t/m 12 jaar</h2>
-                <h3>&euro; 16,50</h3>
-              </hgroup>
-            </li>
+              <li class="product">
+                <hgroup>
+                  <h2>Kind knippen t/m 12 jaar</h2>
+                  <h3>&euro; 16,50</h3>
+                </hgroup>
+              </li>
 
-            <li class="product">
-              <hgroup>
-                <h2>Kind knippen t/m 8 jaar</h2>
-                <h3>&euro; 14,50</h3>
-              </hgroup>
-            </li>
+              <li class="product">
+                <hgroup>
+                  <h2>Kind knippen t/m 8 jaar</h2>
+                  <h3>&euro; 14,50</h3>
+                </hgroup>
+              </li>
 
-            <li class="product">
-              <hgroup>
-                <h2>Permanenten vanaf</h2>
-                <h3>&euro; 29,50</h3>
-              </hgroup>
-            </li>
+              <li class="product">
+                <hgroup>
+                  <h2>Permanenten vanaf</h2>
+                  <h3>&euro; 29,50</h3>
+                </hgroup>
+              </li>
 
-            <li class="product">
-              <hgroup>
-                <h2>Permanenten compl. vanaf</h2>
-                <h3>&euro; 59,50</h3>
-              </hgroup>
-              <em>Knippen, permanenten &amp; masker afwerken</em>
-            </li>
+              <li class="product">
+                <hgroup>
+                  <h2>Permanenten compl. vanaf</h2>
+                  <h3>&euro; 59,50</h3>
+                </hgroup>
+                <em>Knippen, permanenten &amp; masker afwerken</em>
+              </li>
 
-          </ul>
+            </ul>
 
-          <ul class="column">
+            <ul class="column">
 
-            <li class="product">
-              <hgroup>
-                <h2>Kleurspoeling</h2>
-                <h3>&euro; 19,50</h3>
-              </hgroup>
-              <em>Tijdelijke kleuring/opfrissen van uw kleur max 12 keer wassen.</em>
-            </li>
+              <li class="product">
+                <hgroup>
+                  <h2>Kleurspoeling</h2>
+                  <h3>&euro; 19,50</h3>
+                </hgroup>
+                <em>Tijdelijke kleuring/opfrissen van uw kleur max 12 keer wassen.</em>
+              </li>
 
-            <li class="product">
-              <hgroup>
-                <h2>Kleuren vanaf</h2>
-                <h3>&euro; 24,50</h3>
-              </hgroup>
-            </li>
+              <li class="product">
+                <hgroup>
+                  <h2>Kleuren vanaf</h2>
+                  <h3>&euro; 24,50</h3>
+                </hgroup>
+              </li>
 
-            <li class="product">
-              <hgroup>
-                <h2>High / low lights vanaf</h2>
-                <h3>&euro; 29,50</h3>
-              </hgroup>
-            </li>
+              <li class="product">
+                <hgroup>
+                  <h2>High / low lights vanaf</h2>
+                  <h3>&euro; 29,50</h3>
+                </hgroup>
+              </li>
 
-            <li class="product">
-              <hgroup>
-                <h2>Kleuren compleet</h2>
-                <h3>&euro; 49,50</h3>
-              </hgroup>
-            </li>
-          </ul>
+              <li class="product">
+                <hgroup>
+                  <h2>Kleuren compleet</h2>
+                  <h3>&euro; 49,50</h3>
+                </hgroup>
+              </li>
+            </ul>
 
-          <em class="note">Alle behandelingen zijn incl. verzorgende shampoo, lak en versteviging.</em>
-        </section> <!-- #pricedata -->
-      </div> <!-- .wrap -->
+            <em class="note">Alle behandelingen zijn incl. verzorgende shampoo, lak en versteviging.</em>
+          </section> <!-- #pricedata -->
+        </div> <!-- .wrap -->
+      </section>
+      <div id="fill2" class="fill"></div>
 
     </section>
 
-    <section id="fill2" class="fill">
-    </section>
 
-    <section id="producten" class="clearfix">
-      <div class="wrap">
-        <h1>Producten</h1>
+    <section id="producten" class="chapter">
 
-        <p>
-          Bij kappr werken we met de producten van Wella Professionals. kappr
-          verkoopt Wella Professionals producten voor twee verschillende
-          prijzen. <em>Duidelijk en betaalbaar.</em>
-        </p>
+      <section class="content">
+        <div class="wrap">
+          <h1>Producten</h1>
 
-        <div id="products" class="clearfix">
-          <figure id="pricetags">
-            <img src="img/pricetags.jpg">
-          </figure>
-          <figure id="hairproducts">
-            <img src="img/hairproducts.png">
-          </figure>
+          <p>
+            Bij kappr werken we met de producten van Wella Professionals. kappr
+            verkoopt Wella Professionals producten voor twee verschillende
+            prijzen. <em>Duidelijk en betaalbaar.</em>
+          </p>
+
+          <div id="products" class="clearfix">
+            <figure id="pricetags">
+              <img src="img/pricetags.jpg">
+            </figure>
+            <figure id="hairproducts">
+              <img src="img/hairproducts.png">
+            </figure>
+          </div>
+
         </div>
+      </section>
 
-      </div>
+      <div id="fill3" class="fill"></div>
     </section>
 
-    <section id="fill3" class="fill">
-    </section>
+    <section id="locatie" class="chapter">
 
-    <section id="locatie">
-      <div class="wrap">
-        <h1>Locatie</h1>
-        <p>
-          De salon van kappr staat in hartje Nieuwegein. De salon is eenvoudig te bereiken en heeft voldoende ruimte beschikbaar om je auto te parkeren. Parkeren bij de salon is gratis.
-        </p>
+      <section class="content">
+        <div class="wrap">
+          <h1>Locatie</h1>
+          <p>
+            De salon van kappr staat in hartje Nieuwegein. De salon is eenvoudig
+            te bereiken en heeft voldoende ruimte beschikbaar om je auto te
+            parkeren. Parkeren bij de salon is gratis.
+          </p>
 
-        <div id="map">
+          <div id="map">
 
-          <aside>
-            <h2 id="logosmall" class="ir">kappr</h2>
-            <address>
-              Abraham Kuyperpark 172<br>
-              3437 JD Nieuwegein
-            </address>
+            <aside>
+              <h2 id="logosmall" class="ir">kappr</h2>
+              <address>
+                Abraham Kuyperpark 172<br>
+                3437 JD Nieuwegein
+              </address>
 
-            <div id="opening">
-              <h2>Openingstijden</h2>
-              <p>
-                maandag gesloten<br>
-                di t/m do 9.00-18.00<br>
-                vrijdag 9.00-20.00<br>
-                zaterdag 9.00-17.00<br>
-              </p>
-            </div>
-          </aside>
-          <div id="mapcanvas"></div>
+              <div id="opening">
+                <h2>Openingstijden</h2>
+                <p>
+                  maandag gesloten<br>
+                  di t/m do 9.00-18.00<br>
+                  vrijdag 9.00-20.00<br>
+                  zaterdag 9.00-17.00<br>
+                </p>
+              </div>
+            </aside>
+            <div id="mapcanvas"></div>
+          </div>
         </div>
-      </div>
+      </section>
+
+      <div id="fill4" class="fill"></div>
     </section>
 
-    <section id="fill4" class="fill">
-    </section>
-
-    <section id="contact">
-      <div class="wrap">
-        <h1>Contact</h1>
-        <p>
-          <strong>Vragen?</strong> Stuur ons een e-mail op
-          <a href="mailto:mail@kappr.nl">mail@kappr.nl</a>
-          of bel direct naar <em>030 6021675</em>
-        </p>
-      </div>
+    <section id="contact" class="chapter">
+      <section class="content">
+        <div class="wrap">
+          <h1>Contact</h1>
+          <p>
+            <strong>Vragen?</strong> Stuur ons een e-mail op
+            <a href="mailto:mail@kappr.nl">mail@kappr.nl</a>
+            of bel direct naar <em>030 6021675</em>
+          </p>
+        </div>
+      </section>
     </section>
   </div>
   <footer>
