Developing Parallax effects
Added comment header
Adding separate slide images
Parallaxing all separate shapes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
         </hgroup>
       </section>
 
-      <div id="fill1" class="fill"></div>
+      <div id="fill1" class="fill">
+        <div id="fill1-scissor"></div>
+        <div id="fill1-dashedline"></div>
+        <div id="fill1-shapes2"></div>
+        <div id="fill1-shapes1"></div>
+      </div>
     </section>
 
     <section id="prijzen" class="chapter">
