--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   </nav>
 
   <span id="pixels" style="position:fixed;background-color:#000;border:1px solid #ccc;color:#fff;left:10px;top:100px;width:50px;z-index:50;padding:2px 5px;border-radius:3px"></span>
+  <span id="pixels2" style="position:fixed;background-color:#000;border:1px solid #ccc;color:#fff;left:10px;top:130px;width:50px;z-index:50;padding:2px 5px;border-radius:3px"></span>
+  <span id="pixels3" style="position:fixed;background-color:#000;border:1px solid #ccc;color:#fff;left:10px;top:160px;width:50px;z-index:50;padding:2px 5px;border-radius:3px"></span>
+
 
   <div id="main" role="main">
 
