Javascripts effects development

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       </section>
 
       <div id="fill1" class="fill">
+        <div class="fillmask"></div>
         <div id="fill1-scissor"></div>
         <div id="fill1-dashedline"></div>
         <div id="fill1-shapes2"></div>
@@ -153,7 +154,13 @@
           </section> <!-- #pricedata -->
         </div> <!-- .wrap -->
       </section>
-      <div id="fill2" class="fill"></div>
+
+
+      <div id="fill2" class="fill">
+        <div class="fillmask"></div>
+        <div id="fill2-comb"></div>
+        <div id="fill2-lines"></div>
+      </div>
 
     </section>
 
@@ -172,7 +179,9 @@
 
           <div id="products" class="clearfix">
             <figure id="pricetags">
-              <img src="img/pricetags.jpg">
+              <div id="fill3-care"></div>
+              <div id="fill3-styling"></div>
+              <div id="fill3-circles"></div>
             </figure>
             <figure id="hairproducts">
               <img src="img/hairproducts.png">
@@ -182,7 +191,9 @@
         </div>
       </section>
 
-      <div id="fill3" class="fill"></div>
+      <div id="fill3" class="fill">
+        <div class="fillmask"></div>
+      </div>
     </section>
 
     <section id="locatie" class="chapter">
