Updating scroll effects

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </section>
 
       <div id="fill3" class="fill">
-        <div class="fillmask"></div>
+        <!-- <div class="fillmask"></div> -->
       </div>
     </section>
 
@@ -231,7 +231,13 @@
         </div>
       </section>
 
-      <div id="fill4" class="fill"></div>
+      <div id="fill4" class="fill">
+        <div class="fillmask"></div>
+        <div id="fill4-circle1"></div>
+        <div id="fill4-circle2"></div>
+        <div id="fill4-circlesharp"></div>
+        <div id="fill4-circleblur"></div>
+      </div>
     </section>
 
     <section id="contact" class="chapter">
