--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <title>kappr ~ de betaalbare kapper</title>
   <meta name="description" content="kappr is de nieuwe en betaalbare kapper in Nieuwegein">
 
-  <meta name="viewport" content="width=800">
+  <meta name="viewport" content="width=960">
 
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/libs/modernizr-2.5.2.min.js"></script>
+  <script src="js/libs/modernizr-2.5.3.min.js"></script>
+
   <script type="text/javascript" src="http://use.typekit.com/rcy7zcg.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
@@ -23,242 +24,240 @@
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-  <header id="top">
-    <figure id="logo"><img src="img/logo.png" alt="kappr - de betaalbare kapper!"></figure>
-  </header>
-  <nav role="navigation" id="access">
-    <ul>
-      <li><a href="#top">Over ons</a></li>
-      <li><a href="#prijzen">Prijzen</a></li>
-      <li><a href="#producten">Producten</a></li>
-      <li><a href="#locatie">Locatie</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+  <div id="wrap">
 
-  <span id="pixels" style="position:fixed;background-color:#000;border:1px solid #ccc;color:#fff;left:10px;top:100px;width:50px;z-index:50;padding:2px 5px;border-radius:3px"></span>
-  <span id="pixels2" style="position:fixed;background-color:#000;border:1px solid #ccc;color:#fff;left:10px;top:130px;width:50px;z-index:50;padding:2px 5px;border-radius:3px"></span>
-  <span id="pixels3" style="position:fixed;background-color:#000;border:1px solid #ccc;color:#fff;left:10px;top:160px;width:50px;z-index:50;padding:2px 5px;border-radius:3px"></span>
+    <header id="top">
+      <figure id="logo"><img src="img/logo.png" alt="kappr - de betaalbare kapper!"></figure>
+    </header>
+    <nav role="navigation" id="access">
+      <ul>
+        <li><a href="#top">Over ons</a></li>
+        <li><a href="#prijzen">Prijzen</a></li>
+        <li><a href="#producten">Producten</a></li>
+        <li><a href="#locatie">Locatie</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
 
+    <div id="main" role="main">
 
-  <div id="main" role="main">
+      <section id="overons" class="chapter">
+        <section class="content">
+          <hgroup class="wrap">
+            <h1>De nieuwe en <em>betaalbare</em> kapper.</h1>
+            <h2>
+              Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het
+              bekijken van de <em>simpel</em> van een pagina, afgeleid kwaliteit door de
+              tekstuele inhoud.
+            </h2>
+          </hgroup>
+        </section>
 
-    <section id="overons" class="chapter">
-      <section class="content">
-        <hgroup class="wrap">
-          <h1>De nieuwe en <em>betaalbare</em> kapper.</h1>
-          <h2>
-            Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het
-            bekijken van de <em>simpel</em> van een pagina, afgeleid kwaliteit door de
-            tekstuele inhoud.
-          </h2>
-        </hgroup>
+        <div id="fill1" class="fill">
+          <div class="fillmask"></div>
+          <div id="fill1-scissor"></div>
+          <div id="fill1-dashedline"></div>
+          <div id="fill1-shapes2"></div>
+          <div id="fill1-shapes1"></div>
+        </div>
       </section>
 
-      <div id="fill1" class="fill">
-        <div class="fillmask"></div>
-        <div id="fill1-scissor"></div>
-        <div id="fill1-dashedline"></div>
-        <div id="fill1-shapes2"></div>
-        <div id="fill1-shapes1"></div>
-      </div>
-    </section>
+      <section id="prijzen" class="chapter">
 
-    <section id="prijzen" class="chapter">
+        <section class="content">
+          <div class="wrap">
 
-      <section class="content">
-        <div class="wrap">
+            <h1>Prijzen</h1>
+            <p>
+              Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het
+              bekijken van de simpel van een pagina, afgeleid kwaliteit door de
+              tekstuele inhoud.
+            </p>
 
-          <h1>Prijzen</h1>
-          <p>
-            Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het
-            bekijken van de simpel van een pagina, afgeleid kwaliteit door de
-            tekstuele inhoud.
-          </p>
+            <section id="pricedata">
 
-          <section id="pricedata">
+              <ul class="column first">
 
-            <ul class="column first">
+                <li class="product">
+                  <hgroup>
+                    <h2>Knippen</h2>
+                    <h3>&euro; 19,50</h3>
+                  </hgroup>
+                </li>
 
-              <li class="product">
-                <hgroup>
-                  <h2>Knippen</h2>
-                  <h3>&euro; 19,50</h3>
-                </hgroup>
-              </li>
+                <li class="product">
+                  <hgroup>
+                    <h2>Kind knippen t/m 12 jaar</h2>
+                    <h3>&euro; 16,50</h3>
+                  </hgroup>
+                </li>
 
-              <li class="product">
-                <hgroup>
-                  <h2>Kind knippen t/m 12 jaar</h2>
-                  <h3>&euro; 16,50</h3>
-                </hgroup>
-              </li>
+                <li class="product">
+                  <hgroup>
+                    <h2>Kind knippen t/m 8 jaar</h2>
+                    <h3>&euro; 14,50</h3>
+                  </hgroup>
+                </li>
 
-              <li class="product">
-                <hgroup>
-                  <h2>Kind knippen t/m 8 jaar</h2>
-                  <h3>&euro; 14,50</h3>
-                </hgroup>
-              </li>
+                <li class="product">
+                  <hgroup>
+                    <h2>Permanenten vanaf</h2>
+                    <h3>&euro; 29,50</h3>
+                  </hgroup>
+                </li>
 
-              <li class="product">
-                <hgroup>
-                  <h2>Permanenten vanaf</h2>
-                  <h3>&euro; 29,50</h3>
-                </hgroup>
-              </li>
+                <li class="product">
+                  <hgroup>
+                    <h2>Permanenten compl. vanaf</h2>
+                    <h3>&euro; 59,50</h3>
+                  </hgroup>
+                  <em>Knippen, permanenten &amp; masker afwerken</em>
+                </li>
 
-              <li class="product">
-                <hgroup>
-                  <h2>Permanenten compl. vanaf</h2>
-                  <h3>&euro; 59,50</h3>
-                </hgroup>
-                <em>Knippen, permanenten &amp; masker afwerken</em>
-              </li>
+              </ul>
 
-            </ul>
+              <ul class="column">
 
-            <ul class="column">
+                <li class="product">
+                  <hgroup>
+                    <h2>Kleurspoeling</h2>
+                    <h3>&euro; 19,50</h3>
+                  </hgroup>
+                  <em>Tijdelijke kleuring/opfrissen van uw kleur max 12 keer wassen.</em>
+                </li>
 
-              <li class="product">
-                <hgroup>
-                  <h2>Kleurspoeling</h2>
-                  <h3>&euro; 19,50</h3>
-                </hgroup>
-                <em>Tijdelijke kleuring/opfrissen van uw kleur max 12 keer wassen.</em>
-              </li>
+                <li class="product">
+                  <hgroup>
+                    <h2>Kleuren vanaf</h2>
+                    <h3>&euro; 24,50</h3>
+                  </hgroup>
+                </li>
 
-              <li class="product">
-                <hgroup>
-                  <h2>Kleuren vanaf</h2>
-                  <h3>&euro; 24,50</h3>
-                </hgroup>
-              </li>
+                <li class="product">
+                  <hgroup>
+                    <h2>High / low lights vanaf</h2>
+                    <h3>&euro; 29,50</h3>
+                  </hgroup>
+                </li>
 
-              <li class="product">
-                <hgroup>
-                  <h2>High / low lights vanaf</h2>
-                  <h3>&euro; 29,50</h3>
-                </hgroup>
-              </li>
+                <li class="product">
+                  <hgroup>
+                    <h2>Kleuren compleet</h2>
+                    <h3>&euro; 49,50</h3>
+                  </hgroup>
+                </li>
+              </ul>
 
-              <li class="product">
-                <hgroup>
-                  <h2>Kleuren compleet</h2>
-                  <h3>&euro; 49,50</h3>
-                </hgroup>
-              </li>
-            </ul>
+              <em class="note">Alle behandelingen zijn incl. verzorgende shampoo, lak en versteviging.</em>
+            </section> <!-- #pricedata -->
+          </div> <!-- .wrap -->
+        </section>
 
-            <em class="note">Alle behandelingen zijn incl. verzorgende shampoo, lak en versteviging.</em>
-          </section> <!-- #pricedata -->
-        </div> <!-- .wrap -->
+
+        <div id="fill2" class="fill">
+          <div class="fillmask"></div>
+          <div id="fill2-comb"></div>
+          <div id="fill2-lines"></div>
+        </div>
+
       </section>
 
 
-      <div id="fill2" class="fill">
-        <div class="fillmask"></div>
-        <div id="fill2-comb"></div>
-        <div id="fill2-lines"></div>
-      </div>
+      <section id="producten" class="chapter">
 
-    </section>
+        <section class="content">
+          <div class="wrap">
+            <h1>Producten</h1>
 
+            <p>
+              Bij kappr werken we met de producten van Wella Professionals. kappr
+              verkoopt Wella Professionals producten voor twee verschillende
+              prijzen. <em>Duidelijk en betaalbaar.</em>
+            </p>
 
-    <section id="producten" class="chapter">
+            <div id="products" class="clearfix">
+              <figure id="pricetags">
+                <div id="fill3-care"></div>
+                <div id="fill3-styling"></div>
+                <div id="fill3-circles"></div>
+              </figure>
+              <figure id="hairproducts">
+                <img src="img/hairproducts.png">
+              </figure>
+            </div>
 
-      <section class="content">
-        <div class="wrap">
-          <h1>Producten</h1>
-
-          <p>
-            Bij kappr werken we met de producten van Wella Professionals. kappr
-            verkoopt Wella Professionals producten voor twee verschillende
-            prijzen. <em>Duidelijk en betaalbaar.</em>
-          </p>
-
-          <div id="products" class="clearfix">
-            <figure id="pricetags">
-              <div id="fill3-care"></div>
-              <div id="fill3-styling"></div>
-              <div id="fill3-circles"></div>
-            </figure>
-            <figure id="hairproducts">
-              <img src="img/hairproducts.png">
-            </figure>
           </div>
+        </section>
 
+        <div id="fill3" class="fill">
+          <!-- <div class="fillmask"></div> -->
         </div>
       </section>
 
-      <div id="fill3" class="fill">
-        <!-- <div class="fillmask"></div> -->
-      </div>
-    </section>
+      <section id="locatie" class="chapter">
 
-    <section id="locatie" class="chapter">
+        <section class="content">
+          <div class="wrap">
+            <h1>Locatie</h1>
+            <p>
+              De salon van kappr staat in hartje Nieuwegein. De salon is eenvoudig
+              te bereiken en heeft voldoende ruimte beschikbaar om je auto te
+              parkeren. Parkeren bij de salon is gratis.
+            </p>
 
-      <section class="content">
-        <div class="wrap">
-          <h1>Locatie</h1>
-          <p>
-            De salon van kappr staat in hartje Nieuwegein. De salon is eenvoudig
-            te bereiken en heeft voldoende ruimte beschikbaar om je auto te
-            parkeren. Parkeren bij de salon is gratis.
-          </p>
+            <div id="map">
 
-          <div id="map">
+              <aside>
+                <h2 id="logosmall" class="ir">kappr</h2>
+                <address>
+                  Abraham Kuyperpark 172<br>
+                  3437 JD Nieuwegein
+                </address>
 
-            <aside>
-              <h2 id="logosmall" class="ir">kappr</h2>
-              <address>
-                Abraham Kuyperpark 172<br>
-                3437 JD Nieuwegein
-              </address>
-
-              <div id="opening">
-                <h2>Openingstijden</h2>
-                <p>
-                  maandag gesloten<br>
-                  di t/m do 9.00-18.00<br>
-                  vrijdag 9.00-20.00<br>
-                  zaterdag 9.00-17.00<br>
-                </p>
-              </div>
-            </aside>
-            <div id="mapcanvas"></div>
+                <div id="opening">
+                  <h2>Openingstijden</h2>
+                  <p>
+                    maandag gesloten<br>
+                    di t/m do 9.00-18.00<br>
+                    vrijdag 9.00-20.00<br>
+                    zaterdag 9.00-17.00<br>
+                  </p>
+                </div>
+              </aside>
+              <div id="mapcanvas"></div>
+            </div>
           </div>
+        </section>
+
+        <div id="fill4" class="fill">
+          <div class="fillmask"></div>
+          <div id="fill4-circle1"></div>
+          <div id="fill4-circle2"></div>
+          <div id="fill4-circlesharp"></div>
+          <div id="fill4-circleblur"></div>
         </div>
       </section>
 
-      <div id="fill4" class="fill">
-        <div class="fillmask"></div>
-        <div id="fill4-circle1"></div>
-        <div id="fill4-circle2"></div>
-        <div id="fill4-circlesharp"></div>
-        <div id="fill4-circleblur"></div>
-      </div>
-    </section>
-
-    <section id="contact" class="chapter">
-      <section class="content">
-        <div class="wrap">
-          <h1>Contact</h1>
-          <p>
-            <strong>Vragen?</strong> Stuur ons een e-mail op
-            <a href="mailto:mail@kappr.nl">mail@kappr.nl</a>
-            of bel direct naar <em>030 6021675</em>
-          </p>
-        </div>
+      <section id="contact" class="chapter">
+        <section class="content">
+          <div class="wrap">
+            <h1>Contact</h1>
+            <p>
+              <strong>Vragen?</strong> Stuur ons een e-mail op
+              <a href="mailto:mail@kappr.nl">mail@kappr.nl</a>
+              of bel direct naar <em>030 6021675</em>
+            </p>
+          </div>
+        </section>
       </section>
-    </section>
-  </div>
-  <footer>
+    </div>
+    <footer>
 
-    <p>2012 Copyright Kappr. Alle rechten voorbehouden | Design by <a href="http://monk-design.nl">Monk</a> | Code by <a href="http://lekkerduidelijk.nl">lekkerduidelijk</a> </p>
-  </footer>
+      <p>2012 Copyright Kappr. Alle rechten voorbehouden | Design by <a href="http://monk-design.nl">Monk</a> | Code by <a href="http://lekkerduidelijk.nl">lekkerduidelijk</a> </p>
+    </footer>
 
-
+  </div><!-- #wrap -->
+  <div id="loading"></div>
   <!-- JavaScript at the bottom for fast page loading -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
@@ -266,7 +265,7 @@
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
   <!-- scripts concatenated and minified via build script -->
-  <script src="js/plugins.js"></script>
+  <script src="js/plugins.min.js"></script>
   <script src="js/script.js"></script>
   <!-- end scripts -->
 
