--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="utf-8">
-  <title>Page Not Found :(</title>
+  <title>Pagina niet gevonden :(</title>
   <style>
     ::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
     ::selection { background: #fe57a1; color: #fff; text-shadow: none; }
@@ -28,15 +28,15 @@
 </head>
 <body>
   <div class="container">
-    <h1>Not found <span>:(</span></h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
-    <p>It looks like this was the result of either:</p>
+    <h1>Niet gevonden <span>:(</span></h1>
+    <p>Sorry, maar de pagina die je probeerde te bekijken bestaat niet.</p>
+    <p>Dit lijkt te komen door:</p>
     <ul>
-      <li>a mistyped address</li>
-      <li>an out-of-date link</li>
+      <li>een fout ingevoerd adres</li>
+      <li>een verouderde link</li>
     </ul>
     <script>
-      var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
+      var GOOG_FIXURL_LANG = (navigator.language || 'nl').slice(0,2),GOOG_FIXURL_SITE = location.host;
     </script>
     <script src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
   </div>
